@@ -1,3 +1,8 @@
+2007-08-27  Oswald Buddenhagen  <ossi@kde.org>
+
+	* color.h: Add a new color pair.
+	* color.c: Likewise.
+
 2007-08-24  Pavel Tsekov  <ptsekov@gmx.net>
 
 	* screen.c (show_dir): Surrond the current directory with spaces.
